# My-Ebooks

./: README.md  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  fileutil.rs  lib.rs  main.rs
src/common/: createFile.js  utils.js
src/components/: About.vue  EditBook.vue  EditView.vue  Header.vue  HistoryView.vue  Popovers.vue  TxtEditor.vue
src/libs/: parseBook.js
src/store/: appStore.js  bookStore.js
