[package]
name = "my-ebooks"
version = "0.1.0"
description = "捡书 2.0"
authors = ["you"]
edition = "2021"


[lib]

name = "my_ebooks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33.0", features = ["bundled"] }
base64 = "0.21"
